@@ -502,6 +502,13 @@
 #          Default:  false
 #          Example:  rollback=TRUE
 
+# Environment name:  COB_FILE_VBISAM
+#   Parameter name:  file_vbisam
+#          Purpose:  Should ISAM files be created in the old VB-ISAM format
+#             Type:  boolean
+#          Default:  false
+#          Example:  file_vbisam=TRUE
+
 # Environment name:  COB_STOP_RUN_COMMIT
 #   Parameter name:  stop_run_commit
 #          Purpose:  On STOP RUN with updates pending should it COMMIT
