@@ -1501,8 +1501,10 @@ typedef struct __cob_file {
 	unsigned char		flag_lock_rec;		/* Issue lock on current record */
 	unsigned char		flag_lock_mode;		/* 0 - Read; 1 - Write */
 	unsigned char		flag_lock_rls;		/* Release previous record locks */
-	unsigned char		share_mode;		/* Active SHARING MODE */
-	unsigned char		dflt_share;		/* Default SHARING MODE */
+	unsigned char		share_mode;			/* Active SHARING MODE */
+	unsigned char		dflt_share;			/* Default SHARING MODE */
+	unsigned char		isam_duplen;		/* ISAM size of dups counter */
+	unsigned char		isam_idxsz;			/* ISAM size of index block / 512 */
 
 	unsigned short		retry_mode;		/* RETRY mode */
 	unsigned short		dflt_retry;		/* Default RETRY mode */
@@ -1529,10 +1531,10 @@ typedef struct __cob_file {
 	unsigned int		flag_ls_instab:1;	/* LINE SEQUENTIAL replace spaces by TAB (INSERTTAB) */
 	unsigned int		flag_read_chk_dups:1;/* Always check DUPLICATE key on READ NEXT */
 	unsigned int		flag_read_no_02:1;	/* Never return 02 for DUPLICATE on READ NEXT */
+	unsigned int		flag_vb_isam:1;		/* fisam: V-ISAM create VB-ISAM format (Dflt: C-ISAM) */
 	unsigned int		flag_was_updated:1;	/* File had an update since last commit/rollback */
 	unsigned int		flag_close_pend:1;	/* File close is pending commit/rollback */
 	unsigned int		flag_io_tran:1;		/* IO Handler: able to handle commit/rollback */
-	unsigned int		flag_do_log:1;		/* IO Handler: enable commit/rollback (ISAM/database) */
 	unsigned int		flag_do_qbl:1;		/* fileio: enable commit/rollback */
 	unsigned int		flag_do_jrn:1;		/* fileio: record updates to journal/audit trail */
 	unsigned int		unused_bits:10;
