@@ -1,4 +1,8 @@
 
+2021-02-25  Ron Norman <rjn@inglenet.com>
+
+	* fileio: added COB_FILE_VBISAM to set default ISAM format
+
 2021-02-12  Ron Norman <rjn@inglenet.com>
 
 	* fileio database: added comments about some possible environment
